<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="2.0"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical"
              style="@style/AppTheme">

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal">
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logo"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"/>

        <ImageView
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"
                android:src="@drawable/cultivator"
                android:layout_gravity="center_horizontal"/>
    </FrameLayout>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/newImage"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"/>
    <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            style="@style/PreviewBG">
        <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center"
                android:padding="5dp"
                android:text="@string/preview"
                />
        <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                />

    </FrameLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:weightSum="2.0">

        <EditText
                android:id="@+id/imageText"
                style="@style/textInput"
                android:layout_weight="1.3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/picture"
                android:layout_marginBottom="1dp"/>
        <Button
                android:onClick="attachImage"
                android:id="@+id/attachImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="#444"
                android:text="attach"/>
    </LinearLayout>

    <EditText
            style="@style/textInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:hint="@string/description"/>



    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2.0">
        <Button
                android:id="@+id/newNote"
                style="@style/ButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/attachToStory"
                />
        <Button
                android:id="@+id/newImage"
                style="@style/ButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/create"
                />

    </LinearLayout>


</LinearLayout>
