<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="4.0"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical"
              style="@style/AppTheme">

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">
        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/logo"
                android:background="@android:color/transparent"
                android:layout_gravity="center_horizontal"/>

        <ImageView
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"
                android:src="@drawable/cultivator"
                android:layout_gravity="center_horizontal"/>
    </FrameLayout>


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/myList"
              android:paddingTop="1dp"
              android:paddingBottom="10dp"/>

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="3.0">
        <Button
                android:id="@+id/stories"
                style="@style/ButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/stories"
                />
        <Button
                android:id="@+id/notes"
                style="@style/ButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/notes"
                />
        <Button
                android:id="@+id/images"
                style="@style/ButtonStyle"
                android:layout_weight="1.0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/images"
                />

    </LinearLayout>
    <TextView android:id="@+id/listName"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/myList"
              android:paddingTop="1dp"
              android:paddingBottom="10dp"/>
    <ListView
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3"
            android:scrollbars="vertical"
            android:id="@android:id/list"
            android:layout_gravity="center_horizontal"/>


</LinearLayout>